exports[`prefer-then-catch > invalid(1): promise.then(onFulfilled, onRejected); 1`] = `

  1 | promise.then(onFulfilled, onRejected);

`;

exports[`prefer-then-catch > invalid(1): promise.then(onFulfilled, onRejected); 2`] = `

Message:
> 1 | promise.then(onFulfilled, onRejected);
    |         ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

Suggestion 1/1: Move the rejection handler to \`.catch()\`.:
  1 | promise.then(onFulfilled).catch(onRejected);

`;

exports[`prefer-then-catch > invalid(10): promise.then(onFulfilled, onRejected as (error: unknown) => void); 1`] = `

  1 | promise.then(onFulfilled, onRejected as (error: unknown) => void);

`;

exports[`prefer-then-catch > invalid(10): promise.then(onFulfilled, onRejected as (error: unknown) => void); 2`] = `

Message:
> 1 | promise.then(onFulfilled, onRejected as (error: unknown) => void);
    |         ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

Suggestion 1/1: Move the rejection handler to \`.catch()\`.:
  1 | promise.then(onFulfilled).catch(onRejected as (error: unknown) => void);

`;

exports[`prefer-then-catch > invalid(11): promise.then(onFulfilled, <(error: unknown) => void> onRejected); 1`] = `

  1 | promise.then(onFulfilled, <(error: unknown) => void> onRejected);

`;

exports[`prefer-then-catch > invalid(11): promise.then(onFulfilled, <(error: unknown) => void> onRejected); 2`] = `

Message:
> 1 | promise.then(onFulfilled, <(error: unknown) => void> onRejected);
    |         ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

Suggestion 1/1: Move the rejection handler to \`.catch()\`.:
  1 | promise.then(onFulfilled).catch(<(error: unknown) => void> onRejected);

`;

exports[`prefer-then-catch > invalid(12): promise.then(onFulfilled, error => { /* Keep this comment. */ handle(error); }); 1`] = `

  1 | promise.then(onFulfilled, error => { /* Keep this comment. */ handle(error); });

`;

exports[`prefer-then-catch > invalid(12): promise.then(onFulfilled, error => { /* Keep this comment. */ handle(error); }); 2`] = `

Message:
> 1 | promise.then(onFulfilled, error => { /* Keep this comment. */ handle(error); });
    |         ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

Suggestion 1/1: Move the rejection handler to \`.catch()\`.:
  1 | promise.then(onFulfilled).catch(error => { /* Keep this comment. */ handle(error); });

`;

exports[`prefer-then-catch > invalid(13): promise.then(onFulfilled, createRejectionHandler()); 1`] = `

  1 | promise.then(onFulfilled, createRejectionHandler());

`;

exports[`prefer-then-catch > invalid(13): promise.then(onFulfilled, createRejectionHandler()); 2`] = `

Message:
> 1 | promise.then(onFulfilled, createRejectionHandler());
    |         ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

`;

exports[`prefer-then-catch > invalid(14): promise.then(onFulfilled, handlers.onRejected); 1`] = `

  1 | promise.then(onFulfilled, handlers.onRejected);

`;

exports[`prefer-then-catch > invalid(14): promise.then(onFulfilled, handlers.onRejected); 2`] = `

Message:
> 1 | promise.then(onFulfilled, handlers.onRejected);
    |         ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

`;

exports[`prefer-then-catch > invalid(15): promise.then(onFulfilled, tag\`handler\`); 1`] = `

  1 | promise.then(onFulfilled, tag\`handler\`);

`;

exports[`prefer-then-catch > invalid(15): promise.then(onFulfilled, tag\`handler\`); 2`] = `

Message:
> 1 | promise.then(onFulfilled, tag\`handler\`);
    |         ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

`;

exports[`prefer-then-catch > invalid(16): promise.then(onFulfilled, [...handlers]); 1`] = `

  1 | promise.then(onFulfilled, [...handlers]);

`;

exports[`prefer-then-catch > invalid(16): promise.then(onFulfilled, [...handlers]); 2`] = `

Message:
> 1 | promise.then(onFulfilled, [...handlers]);
    |         ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

`;

exports[`prefer-then-catch > invalid(17): promise.then(onFulfilled, {...handlers}); 1`] = `

  1 | promise.then(onFulfilled, {...handlers});

`;

exports[`prefer-then-catch > invalid(17): promise.then(onFulfilled, {...handlers}); 2`] = `

Message:
> 1 | promise.then(onFulfilled, {...handlers});
    |         ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

`;

exports[`prefer-then-catch > invalid(18): promise.then(onFulfilled, /* Do not move this comment. */ onRejected); 1`] = `

  1 | promise.then(onFulfilled, /* Do not move this comment. */ onRejected);

`;

exports[`prefer-then-catch > invalid(18): promise.then(onFulfilled, /* Do not move this comment. */ onRejected); 2`] = `

Message:
> 1 | promise.then(onFulfilled, /* Do not move this comment. */ onRejected);
    |         ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

`;

exports[`prefer-then-catch > invalid(19): promise.then(onFulfilled, onRejected /* Do not move this comment. */); 1`] = `

  1 | promise.then(onFulfilled, onRejected /* Do not move this comment. */);

`;

exports[`prefer-then-catch > invalid(19): promise.then(onFulfilled, onRejected /* Do not move this comment. */); 2`] = `

Message:
> 1 | promise.then(onFulfilled, onRejected /* Do not move this comment. */);
    |         ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

`;

exports[`prefer-then-catch > invalid(2): promise.then(onFulfilled, function onRejected() {}); 1`] = `

  1 | promise.then(onFulfilled, function onRejected() {});

`;

exports[`prefer-then-catch > invalid(2): promise.then(onFulfilled, function onRejected() {}); 2`] = `

Message:
> 1 | promise.then(onFulfilled, function onRejected() {});
    |         ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

Suggestion 1/1: Move the rejection handler to \`.catch()\`.:
  1 | promise.then(onFulfilled).catch(function onRejected() {});

`;

exports[`prefer-then-catch > invalid(20): promise.then(onFulfilled, onRejected, /* Do not move this comment. */); 1`] = `

  1 | promise.then(onFulfilled, onRejected, /* Do not move this comment. */);

`;

exports[`prefer-then-catch > invalid(20): promise.then(onFulfilled, onRejected, /* Do not move this comment. */); 2`] = `

Message:
> 1 | promise.then(onFulfilled, onRejected, /* Do not move this comment. */);
    |         ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

`;

exports[`prefer-then-catch > invalid(21): declare const promise: Promise<string>;\npromise.then(onFulfilled, onRejected); 1`] = `

Filename: file.ts

  1 | declare const promise: Promise<string>;
  2 | promise.then(onFulfilled, onRejected);

`;

exports[`prefer-then-catch > invalid(21): declare const promise: Promise<string>;\npromise.then(onFulfilled, onRejected); 2`] = `

Message:
  1 | declare const promise: Promise<string>;
> 2 | promise.then(onFulfilled, onRejected);
    |         ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

Suggestion 1/1: Move the rejection handler to \`.catch()\`.:
  1 | declare const promise: Promise<string>;
  2 | promise.then(onFulfilled).catch(onRejected);

`;

exports[`prefer-then-catch > invalid(3): declare const value: any;\nvalue.then(onFulfilled, onRejected); 1`] = `

Filename: file.ts

  1 | declare const value: any;
  2 | value.then(onFulfilled, onRejected);

`;

exports[`prefer-then-catch > invalid(3): declare const value: any;\nvalue.then(onFulfilled, onRejected); 2`] = `

Message:
  1 | declare const value: any;
> 2 | value.then(onFulfilled, onRejected);
    |       ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

Suggestion 1/1: Move the rejection handler to \`.catch()\`.:
  1 | declare const value: any;
  2 | value.then(onFulfilled).catch(onRejected);

`;

exports[`prefer-then-catch > invalid(4): function handlePromise(undefined) { promise.then(onFulfilled, undefined); } 1`] = `

  1 | function handlePromise(undefined) { promise.then(onFulfilled, undefined); }

`;

exports[`prefer-then-catch > invalid(4): function handlePromise(undefined) { promise.then(onFulfilled, undefined); } 2`] = `

Message:
> 1 | function handlePromise(undefined) { promise.then(onFulfilled, undefined); }
    |                                             ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

Suggestion 1/1: Move the rejection handler to \`.catch()\`.:
  1 | function handlePromise(undefined) { promise.then(onFulfilled).catch(undefined); }

`;

exports[`prefer-then-catch > invalid(5): Promise.resolve(value).then(onFulfilled, onRejected); 1`] = `

  1 | Promise.resolve(value).then(onFulfilled, onRejected);

`;

exports[`prefer-then-catch > invalid(5): Promise.resolve(value).then(onFulfilled, onRejected); 2`] = `

Message:
> 1 | Promise.resolve(value).then(onFulfilled, onRejected);
    |                        ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

Suggestion 1/1: Move the rejection handler to \`.catch()\`.:
  1 | Promise.resolve(value).then(onFulfilled).catch(onRejected);

`;

exports[`prefer-then-catch > invalid(6): void promise.then(onFulfilled, onRejected); 1`] = `

  1 | void promise.then(onFulfilled, onRejected);

`;

exports[`prefer-then-catch > invalid(6): void promise.then(onFulfilled, onRejected); 2`] = `

Message:
> 1 | void promise.then(onFulfilled, onRejected);
    |              ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

Suggestion 1/1: Move the rejection handler to \`.catch()\`.:
  1 | void promise.then(onFulfilled).catch(onRejected);

`;

exports[`prefer-then-catch > invalid(7): promise.then(onFulfilled, onRejected,); 1`] = `

  1 | promise.then(onFulfilled, onRejected,);

`;

exports[`prefer-then-catch > invalid(7): promise.then(onFulfilled, onRejected,); 2`] = `

Message:
> 1 | promise.then(onFulfilled, onRejected,);
    |         ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

Suggestion 1/1: Move the rejection handler to \`.catch()\`.:
  1 | promise.then(onFulfilled).catch(onRejected);

`;

exports[`prefer-then-catch > invalid(8): promise.then(onFulfilled, (onRejected)); 1`] = `

  1 | promise.then(onFulfilled, (onRejected));

`;

exports[`prefer-then-catch > invalid(8): promise.then(onFulfilled, (onRejected)); 2`] = `

Message:
> 1 | promise.then(onFulfilled, (onRejected));
    |         ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.

Suggestion 1/1: Move the rejection handler to \`.catch()\`.:
  1 | promise.then(onFulfilled).catch((onRejected));

`;

exports[`prefer-then-catch > invalid(9): promise\n\t.then(\n\t\tonFulfilled,\n\t\tonRejected,\n\t)\n\t.then(next); 1`] = `

  1 | promise
  2 | 	.then(
  3 | 		onFulfilled,
  4 | 		onRejected,
  5 | 	)
  6 | 	.then(next);

`;

exports[`prefer-then-catch > invalid(9): promise\n\t.then(\n\t\tonFulfilled,\n\t\tonRejected,\n\t)\n\t.then(next); 2`] = `

Message:
  1 | promise
> 2 | 	.then(
    | 	 ^^^^ Prefer \`.then(…).catch(…)\` over passing a rejection handler to \`.then()\`.
  3 | 		onFulfilled,
  4 | 		onRejected,
  5 | 	)
  6 | 	.then(next);

Suggestion 1/1: Move the rejection handler to \`.catch()\`.:
  1 | promise
  2 | 	.then(
  3 | 		onFulfilled
  4 | 	).catch(onRejected)
  5 | 	.then(next);

`;
